add my custom bitrixdock

--- a/apache/conf/httpd.conf
+++ b/apache/conf/httpd.conf
@@ -106,5 +106,17 @@ ServerName bitrix
     AllowOverride ALL
 </Directory>
 
+<Directory "/var/www/bitrix/">
+    AllowOverride ALL
+    Options FollowSymLinks
+    Require all granted
+</Directory>
+
+<Directory "/var/www/bitrix2/">
+    AllowOverride ALL
+    Options FollowSymLinks
+    Require all granted
+</Directory>
+
 LogLevel warn
 IncludeOptional /etc/apache2/conf.d/*.conf
