--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PHP_VERSION=php7
 
 # Web server type. Allowed value is apache or nginx.
-WEB_SERVER_TYPE=nginx
+WEB_SERVER_TYPE=apache
 
 # MySQL settings
 MYSQL_DATABASE=bitrix
@@ -10,7 +10,8 @@ MYSQL_USER=bitrix
 MYSQL_PASSWORD=123
 MYSQL_ROOT_PASSWORD=123
 
-INTERFACE=0.0.0.0
+INTERFACE=127.0.0.1
 
 # Site path
-SITE_PATH=/var/www/bitrix
+SITE_PATH=./www/html/updk/updk.ru
+SITE_PATH2=./www/html/updk/arenda.updk.ru
