--- a/apache/conf/conf.d/default.conf
+++ b/apache/conf/conf.d/default.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
+	ServerName docker.updk.ru
 
 	DocumentRoot /var/www/bitrix
 	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/bitrix/$1
@@ -7,7 +8,7 @@
 	ProxyPassMatch ^/(fpm-ping|fpm-status) fcgi://php:9000 
 
 	<IfModule dir_module>
-	    DirectoryIndex index.html
+	    DirectoryIndex index.html index.php
 	</IfModule>
 
 	<Files ".ht*">
@@ -16,12 +17,50 @@
 
 	<Directory />
 		Options FollowSymLinks
-		AllowOverride None
+		AllowOverride ALL
 	</Directory>
 
 	<Directory "/var/www/bitrix/">
-	    AllowOverride None
-	    Options None
+	    AllowOverride ALL
+	    Options FollowSymLinks
+	    Require all granted
+	</Directory>
+
+	ErrorLog /var/log/apache-error.log
+
+	# Possible values include: debug, info, notice, warn, error, crit,
+	# alert, emerg.
+	LogLevel warn
+
+	CustomLog /var/log/apache-access.log combined
+
+</VirtualHost>
+
+<VirtualHost *:80>
+	ServerAdmin webmaster@localhost
+	ServerName docker.arenda.updk.ru
+
+	DocumentRoot /var/www/bitrix2
+	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/bitrix2/$1
+	ProxyTimeout 300
+	ProxyPassMatch ^/(fpm-ping|fpm-status) fcgi://php:9000
+
+	<IfModule dir_module>
+	    DirectoryIndex index.html index.php
+	</IfModule>
+
+	<Files ".ht*">
+	    Require all denied
+	</Files>
+
+	<Directory />
+		Options FollowSymLinks
+		AllowOverride ALL
+	</Directory>
+
+	<Directory "/var/www/bitrix2/">
+	    AllowOverride ALL
+	    Options FollowSymLinks
 	    Require all granted
 	</Directory>
 
