--- a/php7/php.ini
+++ b/php7/php.ini
@@ -23,11 +23,12 @@ opcache.fast_shutdown = 1
 opcache.error_log = "/var/log/php/opcache.log"
 
 [xdebug]
-xdebug.remote_host = "192.168.1.100"
-xdebug.remote_port = 900
+xdebug.remote_host = "host.docker.internal"
+xdebug.remote_port = 9001
+xdebug.remote_connect_back = 0
 xdebug.auto_trace = 0
 xdebug.default_enable = 1
-xdebug.idekey = "PhpStorm"
+xdebug.idekey = "PHPSTORM"
 xdebug.max_nesting_level = 250
 xdebug.profiler_enable = 0
 xdebug.profiler_enable_trigger = 0
