working environment is ready

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+COMPOSE_FILE=docker-compose.yml;docker-compose.override.yml
+
 # PHP version settings. Allowed value is php56 or php7.
 PHP_VERSION=php7
 
@@ -10,8 +12,9 @@ MYSQL_USER=bitrix
 MYSQL_PASSWORD=123
 MYSQL_ROOT_PASSWORD=123
 
-INTERFACE=127.0.0.1
+INTERFACE=192.168.99.100
 
 # Site path
-SITE_PATH=./www/html/updk/updk.ru
+#SITE_PATH=./www/html/
+SITE_PATH=./www/html/qsoft
 SITE_PATH2=./www/html/updk/arenda.updk.ru
