--- a/.env
+++ b/.env
@@ -11,10 +11,11 @@ MYSQL_DATABASE=bitrix
 MYSQL_USER=bitrix
 MYSQL_PASSWORD=123
 MYSQL_ROOT_PASSWORD=123
+DB_PATH=./data/mysql/business
 
 INTERFACE=192.168.99.100
 
 # Site path
 #SITE_PATH=./www/html/
-SITE_PATH=./www/html/qsoft
+SITE_PATH=../../qsoft/afk-sistema
 SITE_PATH2=./www/html/updk/arenda.updk.ru
