Настройки для рабочего места

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-COMPOSE_FILE=docker-compose.yml;docker-compose.override.yml
+COMPOSE_FILE=docker-compose.yml
+#COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
 
 # PHP version settings. Allowed value is php56 or php7.
 PHP_VERSION=php7
@@ -13,9 +14,9 @@ MYSQL_PASSWORD=123
 MYSQL_ROOT_PASSWORD=123
 DB_PATH=./data/mysql/business
 
-INTERFACE=192.168.99.100
+INTERFACE=172.17.0.1
 
 # Site path
 #SITE_PATH=./www/html/
-SITE_PATH=../../qsoft/afk-sistema
+SITE_PATH=../NTS/
 SITE_PATH2=./www/html/updk/arenda.updk.ru
