--- a/apache/conf/conf.d/default.conf
+++ b/apache/conf/conf.d/default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	ServerName docker.updk.ru
+	ServerName docker.self
 
 	DocumentRoot /var/www/bitrix
 	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/bitrix/$1
@@ -38,7 +38,7 @@
 
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	ServerName docker.arenda.updk.ru
+	ServerName docker.second.self
 
 	DocumentRoot /var/www/bitrix2
 	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/bitrix2/$1
