Добавлен php7.0 для NLMK

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ COMPOSE_FILE=docker-compose.yml
 #COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
 
 # PHP version settings. Allowed value is php56 or php7.
-PHP_VERSION=php7
+PHP_VERSION=php70
 
 # Web server type. Allowed value is apache or nginx.
 WEB_SERVER_TYPE=apache
@@ -18,5 +18,6 @@ INTERFACE=172.17.0.1
 
 # Site path
 #SITE_PATH=./www/html/
-SITE_PATH=../NTS/
+#SITE_PATH=../NTS/
+SITE_PATH=../NLMK/
 SITE_PATH2=./www/html/updk/arenda.updk.ru
