--- a/php70/php.ini
+++ b/php70/php.ini
@@ -12,6 +12,7 @@ mbstring.internal_encoding = "UTF-8"
 max_input_vars = 10000
 post_max_size = 1024M
 upload_max_filesize = 1024M
+max_execution_time = 900
 
 [opcache]
 opcache.revalidate_freq = 0
@@ -25,6 +26,7 @@ opcache.error_log = "/var/log/php/opcache.log"
 [xdebug]
 xdebug.remote_host = "172.17.0.1"
 xdebug.remote_port = 9001
+xdebug.remote_connect_back = 0
 xdebug.auto_trace = 0
 xdebug.default_enable = 1
 xdebug.idekey = "xdebug"
