--- a/apache/conf/httpd.conf
+++ b/apache/conf/httpd.conf
@@ -94,6 +94,9 @@ LoadModule rewrite_module modules/mod_rewrite.so
 
 LoadModule negotiation_module modules/mod_negotiation.so
 
+LoadModule ssl_module modules/mod_ssl.so
+#Include /etc/apache2/extra/httpd-ssl.conf
+
 <IfModule unixd_module>
     User www
     Group www
