Добавлена конфигурация mysql сервера, установка кодировки по умолчанию utf8

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -9,3 +9,7 @@ transaction-isolation=READ-COMMITTED
 binlog_cache_size=0
 sql_mode=""
 
+[server]
+skip-character-set-client-handshake
+init-connect='set NAMES utf8'
+
