--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             - source
         environment:
               PHP_IDE_CONFIG: serverName=docker.self
-              XDEBUG_CONFIG: idekey=xdebug
+#              XDEBUG_CONFIG: idekey=xdebug
         ports:
             - '${INTERFACE}:9000:9000'
         links:
