--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,8 @@
-COMPOSE_FILE=docker-compose.yml
-#COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
+#COMPOSE_FILE=docker-compose.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
 
 # PHP version settings. Allowed value is php56 or php7.
-PHP_VERSION=php70
+PHP_VERSION=php73
 
 # Web server type. Allowed value is apache or nginx.
 WEB_SERVER_TYPE=apache
@@ -14,10 +14,11 @@ MYSQL_PASSWORD=123
 MYSQL_ROOT_PASSWORD=123
 DB_PATH=./data/mysql/business
 
-INTERFACE=172.17.0.1
+INTERFACE=192.168.99.100
 
 # Site path
 #SITE_PATH=./www/html/
 #SITE_PATH=../NTS/
-SITE_PATH=../NLMK/
+#SITE_PATH=../NLMK/
+SITE_PATH=../../qsoft/open-daily
 SITE_PATH2=./www/html/updk/arenda.updk.ru
