--- a/php56/php.ini
+++ b/php56/php.ini
@@ -23,8 +23,10 @@ opcache.fast_shutdown = 1
 opcache.error_log = "/var/log/php/opcache.log"
 
 [xdebug]
-xdebug.remote_host = "172.17.0.1"
-xdebug.remote_port = 9001
+;xdebug.remote_host = "172.17.0.1"
+;xdebug.remote_port = 9001
+xdebug.remote_host = "192.168.1.100"
+xdebug.remote_port = 900
 xdebug.auto_trace = 0
 xdebug.default_enable = 1
 xdebug.idekey = "xdebug"
