--- a/php73/Dockerfile
+++ b/php73/Dockerfile
@@ -21,6 +21,7 @@ MAINTAINER vitams
 
 ADD ./php.ini /etc/php/7.3/fpm/conf.d/90-php.ini
 ADD ./php.ini /etc/php/7.3/cli/conf.d/90-php.ini
+ADD ./additional.conf /etc/php/7.3/fpm/pool.d/z-additional.conf
 
 RUN usermod -u 1000 www-data
 
