--- a/php73/php.ini
+++ b/php73/php.ini
@@ -7,7 +7,7 @@ log_errors = On
 display_startup_errors = On
 cgi.fix_pathinfo = 0
 date.timezone = "Europe/Moscow"
-mbstring.func_overload = 2
+mbstring.func_overload = 0
 mbstring.internal_encoding = "UTF-8"
 max_input_vars = 10000
 post_max_size = 1024M
@@ -24,8 +24,11 @@ opcache.fast_shutdown = 1
 opcache.error_log = "/var/log/php/opcache.log"
 
 [xdebug]
-xdebug.remote_host = "172.17.0.1"
-xdebug.remote_port = 9001
+xdebug.client_host = "192.168.64.1"
+xdebug.client_port = 9001
+xdebug.mode = debug
+xdebug.start_with_request=yes
+
 ;xdebug.remote_host = "192.168.99.10"
 ;xdebug.remote_port = 9000
 xdebug.remote_connect_back = 0
