--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,6 +8,9 @@ ADD conf/upstream.conf /etc/nginx/conf.d/
 
 RUN usermod -u 1000 www-data
 
+COPY ./ssl/cert.key /etc/nginx/ssl/cert.key
+COPY ./ssl/cert.pem /etc/nginx/ssl/cert.pem
+
 CMD ["nginx"]
 
 EXPOSE 80 443
