--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,10 +1,12 @@
 server {
-    listen 80 default;
+    listen 443 ssl http2 default;
 
     server_name docker.self;
     charset utf-8;
     root /var/www/bitrix;
     index index.php index.html bitrixsetup.php;
+    ssl_certificate     /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/cert.key;
 
     client_max_body_size 32m;
 
@@ -12,16 +14,7 @@ server {
     error_log /var/log/nginx/bitrix-error.log;
 
     location / {
-        if (-f /var/www/bitrix/index.php) {
-             root /var/www/bitrix;
-            break;
-        }
-        if (-f /var/www/bitrix/bitrixsetup.php) {
-            root /var/www/bitrix;
-            break;
-        }
         try_files $uri $uri/ @bitrix;
-        root  /var/www/html;
     }
 
     location @bitrix {
@@ -55,16 +48,6 @@ server {
         client_max_body_size 1024m;
     }
 
-    location = /favicon.png {
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /robots.txt {
-        log_not_found off;
-        access_log off;
-    }
-
     location ~* ^.+\.(jpg|jpeg|gif|png|svg|js|css|mp3|ogg|mpe?g|avi|zip|gz|bz2?|rar|eot|otf|ttf|woff|woff2)$ {
         log_not_found off;
         access_log off;
@@ -90,11 +73,5 @@ server {
 
     location ~ /.gitignore {
         deny all;
-    }
-
-    error_page 404 /404.html;
-
-    location /404.html {
-
     }
 }
