--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -24,6 +24,7 @@ server {
     }
 
     location ~ \.php$ {
+        try_files $uri @bitrix;
         include fastcgi_params;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
