--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -21,6 +21,9 @@ http {
     access_log on;
     error_log on;
     gzip on;
+    gzip_min_length 1000;
+    gzip_comp_level 9;
+    gzip_types application/javascript application/x-javascript text/css font/ttf font/opentype font/woff font/woff2
     gzip_disable "msie6";
     log_format postdata '$remote_addr - $remote_user [$time_local] "$request" $status $bytes_sent "$http_referer" "$http_user_agent" "$request_body"';
     include /etc/nginx/conf.d/*.conf;
