--- a/docker-compose.open-daily.yml
+++ b/docker-compose.open-daily.yml
@@ -25,7 +25,7 @@ services:
     image: kibana:7.6.2
     container_name: kibana
     environment:
-      SERVER_NAME: kibana
+      SERVER_NAME: kibana11
       ELASTICSEARCH_HOSTS: http://172.27.2.20:9200
 #    links:
 #      - es01
@@ -34,5 +34,5 @@ services:
     ports:
       - '${INTERFACE}:5601:5601'
     networks:
-      - bitrix
+        - bitrix
     restart: always
