--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -21,6 +21,8 @@ server {
         fastcgi_pass php-upstream;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root/bitrix/urlrewrite.php;
+        fastcgi_param PHP_AUTH_USER admin;
+        fastcgi_param PHP_AUTH_PW bogus_auth_gss_passwd;
     }
 
     location ~ \.php$ {
@@ -31,6 +33,8 @@ server {
         fastcgi_send_timeout 21600;
         fastcgi_read_timeout 21600;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PHP_AUTH_USER admin;
+        fastcgi_param PHP_AUTH_PW bogus_auth_gss_passwd;
     }
 
     location = /restore.php {
