настройка xdebug profiler

--- a/php74/php.ini
+++ b/php74/php.ini
@@ -24,20 +24,15 @@ opcache.fast_shutdown = 1
 opcache.error_log = "/var/log/php/opcache.log"
 
 [xdebug]
-xdebug.client_host = "192.168.64.1"
+xdebug.client_host = "192.168.1.51"
 xdebug.client_port = 9001
-xdebug.mode = debug
-xdebug.start_with_request=yes
+xdebug.mode = develop,debug,profile
+xdebug.start_with_request = trigger
 
 ;xdebug.remote_host = "192.168.99.10"
 ;xdebug.remote_port = 9000
-xdebug.remote_connect_back = 0
-xdebug.auto_trace = 0
-xdebug.default_enable = 1
+xdebug.discover_client_host = false
 xdebug.idekey = "xdebug"
 xdebug.max_nesting_level = 250
-xdebug.profiler_enable = 0
-xdebug.profiler_enable_trigger = 0
-xdebug.profiler_output_dir = "/tmp/"
+xdebug.output_dir = "/var/temp/"
 xdebug.profiler_output_name = "cachegrind.out.%H%R"
-xdebug.remote_enable = 1
