--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     php:
         build: ./${PHP_VERSION}
         container_name: php
+        depends_on:
+            - source
         volumes_from:
             - source
         environment:
@@ -72,7 +74,8 @@ services:
             - ./data/temp:/var/temp
             - ../aditional_files/config:/var/www/config
             - ../aditional_files/logs:/var/www/logs
-#            - ./php71/php.ini:/etc/php/7.1/fpm/conf.d/90-php.ini
+            - ./php74/php.ini:/etc/php/7.4/fpm/conf.d/90-php.ini
+            - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
         networks:
             - bitrix
     phpmyadmin:
