--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -2,8 +2,8 @@ FROM phpdockerio/php74-fpm:latest
 
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
-    php-memcached \
-    php-memcache \
+    php7.4-memcached \
+    php7.4-memcache \
     php7.4-mbstring \
     php7.4-mysql \
     php7.4-intl \
