изменена конфигурация php7.3,php7.4, подключен memcache, добавлен helper для пересборки контейнеров

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
             - '${INTERFACE}:11211:11211'
         networks:
             - bitrix
-#        restart: always
+        restart: always
     source:
         image: alpine:latest
         container_name: source
