--- a/php73/Dockerfile
+++ b/php73/Dockerfile
@@ -2,17 +2,17 @@ FROM phpdockerio/php73-fpm:latest
 
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
-    php-memcached \
-    php-memcache \
+    php7.3-memcached \
+    php7.3-memcache \
     php7.3-mbstring \
     php7.3-mysql \
     php7.3-intl \
-    php-xdebug \
+    php7.3-xdebug \
     php7.3-interbase \
     php7.3-soap \
     php7.3-gd \
-    php-imagick \
-    libmcrypt-dev \
+    php7.3-imagick \
+    php7.3-mcrypt \
     php7.3-opcache \
     php7.3-zip \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
