добавлена конфигурация для laravel

--- a/.env.dev
+++ b/.env.dev
@@ -21,4 +21,4 @@ INTERFACE=192.168.99.100
 #SITE_PATH=../NTS/
 #SITE_PATH=../NLMK/
 SITE_PATH=../../qsoft/open-daily
-SITE_PATH2=./www/html/updk/arenda.updk.ru
+SITE_PATH2=../laravel
