настройка для farmapershop

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -87,29 +87,87 @@ server {
     server_name laravel.self;
     root /var/www/laravel/public;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
+    client_max_body_size 512m;
+    client_body_buffer_size 512m;
+    ssi on;
+    gzip on;
+    gzip_comp_level 7;
+    gzip_types application/x-javascript application/javascript text/css;
+    charset off;
+
+    error_page  405     =200 $uri;
+
+    proxy_set_header X-Real-IP       $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host            $http_host;
+
+    rewrite captcha.jpg /system/kcaptcha/index.php;
+    rewrite metrika.js /system/generators/JSFactory.php;
+    rewrite !((^(mail|images|files|_layout|scripts|temp|js|plugins|css))|(^profiles\/(([^_\/]+|_backend)\/)?_templs\/.+\.css$)|(.+\.php$)|(.+\.txt$)|(^index.php$)|(^robots.txt$)|(^sitemap.xml$)|(^favicon.ico$)) /index.php;
+
+
+    access_log /var/log/nginx/farmapershop.access.log ;
+    error_log /var/log/nginx/farmapershop.error.log notice;
 
     index index.php;
-
-    charset utf-8;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
+    location ~ ^/files/img/ {
+        limit_except GET HEAD OPTIONS { deny all; }
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host aptekiplus.ru;
+        proxy_set_header  Authorization "";
+        proxy_hide_header Authorization;
+        proxy_redirect off;
+        proxy_next_upstream off;
+        proxy_intercept_errors on;
+        proxy_pass http://p1.farmapershop.vpool;
+        proxy_buffering off;
+        recursive_error_pages on;
+        keepalive_timeout 300;
+        reset_timedout_connection on;
+        client_body_timeout 10;
+        proxy_connect_timeout      900;
+        proxy_send_timeout         900;
+        proxy_read_timeout         900;
+        expires 30;
+        error_page 404 =200 @nofoto;
+    }
 
-    error_page 404 /index.php;
+    location ~ ^/files/ {
+        limit_except GET HEAD OPTIONS { deny all; }
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host aptekiplus.ru;
+        proxy_set_header  Authorization "";
+        proxy_hide_header Authorization;
+        proxy_redirect off;
+        proxy_next_upstream off;
+        proxy_intercept_errors on;
+        proxy_pass http://p1.farmapershop.vpool;
+        proxy_buffering off;
+        recursive_error_pages on;
+        keepalive_timeout 300;
+        reset_timedout_connection on;
+        client_body_timeout 10;
+        proxy_connect_timeout      900;
+        proxy_send_timeout         900;
+        proxy_read_timeout         900;
+    }
+
+    location @nofoto {
+        try_files $uri /images/users/nofoto.png;
+        expires 30d;
+        error_page 404 =404 @empty_gif;
+    }
+
+    location @empty_gif { expires -1; empty_gif; }
 
     location ~ \.php$ {
         fastcgi_pass php-upstream;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
-    }
-
-    location ~ /\.(?!well-known).* {
-        deny all;
     }
 }
