настройка для farmapershop

--- a/.env.dev
+++ b/.env.dev
@@ -20,5 +20,5 @@ INTERFACE=192.168.99.100
 #SITE_PATH=./www/html/
 #SITE_PATH=../NTS/
 #SITE_PATH=../NLMK/
-SITE_PATH=../../qsoft/open-daily
+#SITE_PATH=../open-daily
 SITE_PATH2=../laravel
