--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER vitams
 
 ADD conf/nginx.conf /etc/nginx/
 ADD conf/default.conf /etc/nginx/conf.d/
+#ADD conf/bitrix.conf /etc/nginx/conf.d/
 ADD conf/upstream.conf /etc/nginx/conf.d/
 
 RUN usermod -u 1000 www-data
