--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -25,6 +25,6 @@ ADD ./php.ini /etc/php/7.4/cli/conf.d/90-php.ini
 
 RUN usermod -u 1000 www-data
 
-WORKDIR "/var/www/bitrix"
+WORKDIR "/var/www/laravel"
 
 EXPOSE 9000
