--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -44,7 +44,7 @@ server {
         proxy_redirect off;
         proxy_next_upstream off;
         proxy_intercept_errors on;
-        proxy_pass http://p1.farmapershop.vpool;
+        proxy_pass http://172.27.2.58:9001;
         proxy_buffering off;
         recursive_error_pages on;
         keepalive_timeout 300;
@@ -66,7 +66,7 @@ server {
         proxy_redirect off;
         proxy_next_upstream off;
         proxy_intercept_errors on;
-        proxy_pass http://p1.farmapershop.vpool;
+        proxy_pass http://172.27.2.58:9001;
         proxy_buffering off;
         recursive_error_pages on;
         keepalive_timeout 300;
