--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -22,7 +22,7 @@ server {
     proxy_set_header Host            $http_host;
 
     rewrite captcha.jpg /system/kcaptcha/index.php;
-    rewrite metrika.js /system/generators/JSFactory.php;
+    rewrite metrika-goals.js /index.php;
     rewrite !((^(mail|images|files|_layout|scripts|temp|js|plugins|css))|(^profiles\/(([^_\/]+|_backend)\/)?_templs\/.+\.css$)|(.+\.php$)|(.+\.txt$)|(^index.php$)|(^robots.txt$)|(^sitemap.xml$)|(^favicon.ico$)) /index.php;
 
 
@@ -44,7 +44,7 @@ server {
         proxy_redirect off;
         proxy_next_upstream off;
         proxy_intercept_errors on;
-        proxy_pass http://p1.farmapershop.vpool;
+        proxy_pass http://172.27.2.58:9001;
         proxy_buffering off;
         recursive_error_pages on;
         keepalive_timeout 300;
@@ -66,7 +66,7 @@ server {
         proxy_redirect off;
         proxy_next_upstream off;
         proxy_intercept_errors on;
-        proxy_pass http://p1.farmapershop.vpool;
+        proxy_pass http://172.27.2.58:9001;
         proxy_buffering off;
         recursive_error_pages on;
         keepalive_timeout 300;
