--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -2,6 +2,7 @@ server {
     listen 443 ssl http2 default;
     listen 80 default;
     server_name laravel.self;
+    charset utf-8;
     root /var/www/laravel/public;
 
     ssl_certificate     /etc/nginx/ssl/cert.pem;
@@ -13,7 +14,6 @@ server {
     gzip on;
     gzip_comp_level 7;
     gzip_types application/x-javascript application/javascript text/css;
-    charset off;
 
     error_page  405     =200 $uri;
 
